start the implementation of the endpoint to get tag by id. Only mapper to completed
